# emerald_herald

./: .dockerignore  .example.env  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  justfile
src/: applications.rs  lib.rs  log.rs  main.rs  management.rs  routing.rs
src/date/: mod.rs
src/ebisu/: mod.rs
src/gateway/: guard.rs  mod.rs  request.rs  responder.rs  response.rs
src/log/: format.rs  mod.rs  storage.rs
