[package]
name = "emerald_herald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
color-eyre = { version = "0.5", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.2.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }