[package]
name = "emerald_herald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }
color-eyre = { version = "0.5", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }